--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.3.0",
+    "mongoose": "^7.1.0",
     "node": "^20.1.0",
     "nodemon": "^2.0.22",
     "vite": "^4.3.4"
