--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mongoose": "^7.1.0",
     "node": "^20.1.0",
     "nodemon": "^2.0.22",
+    "sqlite3": "^5.1.6",
     "vite": "^4.3.4"
   }
 }
